feat: ready for game 3

--- a/src/data/s1e3/categories.yml
+++ b/src/data/s1e3/categories.yml
@@ -1,12 +1,12 @@
 - name: CSS
   sponsor: CodePen
 
-- name: Acronyms
+- name: Deployment
 
 - name: Authentication
   sponsor: Clerk
 
-- name: Accessibility
+- name: Team Dynamics
 
-- name: Shipping Fast
+- name: Dev Lore
   sponsor: Neon
