feat: ready for game 4

--- a/src/data/s1e3/categories.yml
+++ b/src/data/s1e3/categories.yml
@@ -1,12 +1,12 @@
 - name: CSS
   sponsor: CodePen
 
-- name: Deployment
+- name: Developerisms
 
-- name: Authentication
+- name: User Management
   sponsor: Clerk
 
-- name: Team Dynamics
+- name: Accessibility
 
-- name: Dev Lore
+- name: Frameworks
   sponsor: Neon
